--- a/styles/style.css
+++ b/styles/style.css
@@ -52,7 +52,7 @@ nav h2 {
 
 .container {
     display: flex;
-    padding: 55px 0 100px 0;
+    padding: 55px 0 30px 0;
 
 }
 
@@ -101,4 +101,28 @@ nav h2 {
     font-weight: 700;
     font-size: 16px;
     margin-right: 8px;
+}
+
+/*-------- logos style -------*/
+
+hr {
+    width: 900px;
+}
+
+.logos {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 900px;
+}
+
+.logo img {
+    width: 60px;
 }
