--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,9 @@ body {
     margin: 0 auto;
 }
 
-/*-------- header styles------ */
+/*---------------
+ header styles
+ ---------------- */
 
 nav {
     padding-top: 10px;
@@ -52,7 +54,7 @@ nav h2 {
 
 .container {
     display: flex;
-    padding: 55px 0 30px 0;
+    padding: 80px 0 30px 0;
 
 }
 
@@ -103,17 +105,20 @@ nav h2 {
     margin-right: 8px;
 }
 
-/*-------- logos style -------*/
-
-hr {
-    width: 900px;
-}
+/*----------- 
+logos style 
+-------------*/
 
 .logos {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 100px 0 0px 0;
+}
+
+hr {
+    width: 900px;
 }
 
 .logo {
@@ -126,3 +131,94 @@ hr {
 .logo img {
     width: 60px;
 }
+
+/*------------
+ popular collection
+ --------- */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+
+}
+
+.card {
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+
+.content h3 {
+    color: #18191F;
+    font-weight: 600;
+    font-size: 28px;
+    color: #3A3A3A;
+    margin: 100px 0 30px 0;
+}
+
+.content .card h3 {
+    color: #18191F;
+    font-weight: 500;
+    font-size: 28px;
+    margin: 16px 0 6px 0;
+}
+
+.card h4 {
+    font-weight: 400;
+    font-size: 24px;
+    color: rgba(0, 0, 0, 0.87);
+    margin: 0 0 8px 0;
+
+}
+
+.card img {
+    width: 300px;
+    height: 256px;
+    border-radius: 5px;
+}
+
+.rating {
+    color: #FB8200;
+    width: 10px;
+    display: flex;
+    align-items: center;
+}
+
+.rating span {
+    font-weight: 700;
+    color: #5E6366;
+    margin-left: 8px;
+}
+
+.content .card p {
+    font-weight: 700;
+    font-size: 14px;
+    color: #787885;
+    line-height: 143%;
+    margin: 3px 0 0 0;
+}
+
+.see-more {
+    display: flex;
+    align-items: center;
+    color: rgba(224, 44, 109, 0.87);
+    justify-content: end;
+    margin-top: 50px;
+}
+
+.see-more p {
+    font-weight: 700;
+    font-size: 16px;
+    margin: 0;
+}
+
+/*-----------------
+ Featured products
+------------------- */
