--- a/styles/style.css
+++ b/styles/style.css
@@ -263,3 +263,40 @@ hr {
 .gear-info {
     width: 50%;
 }
+
+/*------------------
+ footer section 
+ -------------------*/
+
+footer {
+    padding: 50px 0;
+    text-align: center;
+
+    background-color: #0A0826;
+    margin-top: 100px;
+    color: white;
+}
+
+footer h2 {
+    font-weight: 600;
+    font-size: 24px;
+    margin-top: 0;
+}
+
+footer p {
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.social-media a {
+    text-rendering: none;
+    width: 32px;
+    height: 32px;
+}
+
+.social-media a i {
+    padding: 8px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    color: white;
+}
