--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,12 @@ nav h2 {
     color: rgb(0, 0, 0);
 }
 
+.right-bar-two a {
+    display: none;
+    color: rgb(0, 0, 0);
+    justify-content: space-between;
+}
+
 /*----------
  Influencer journey
  --------- */
@@ -61,12 +67,20 @@ nav h2 {
 .influencer-detailes,
 .main-images {
     width: 50%;
+}
 
+#circle1 {
+    z-index: 1;
+}
+
+#circle {
+    position: absolute;
 }
 
 .main-images {
     display: flex;
-    justify-content: end
+    justify-content: end;
+    position: relative;
 }
 
 .main-images img {
@@ -299,4 +313,20 @@ footer p {
     background-color: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     color: white;
+}
+
+@media only screen and (max-width:688px) {
+
+    .nav h2 {
+        align-items: center;
+    }
+
+    .right-bar {
+        display: none;
+    }
+
+    .right-bar-two a {
+        display: flex;
+        justify-content: space-between;
+    }
 }
